--- a/style.css
+++ b/style.css
@@ -1,7 +1,137 @@
-body{
-    margin-left: 6.25rem;
-    margin-right: 6.25rem;
+* {
+    color: inherit;
+    text-decoration: none;
+    list-style: none;
 }
+
 header {
     position: fixed;
+    height: 4rem;
+    width: 100%;
+    top: 0;
+
+    padding-right: 8%;
+    padding-left: 8%;
+
+    background-color: #365F41;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header_logo {
+    height: 5rem;
+    width: auto;
+}
+
+.header_menu {
+    flex: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 100%;
+
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 0.9rem;
+    line-height: 22px;
+    text-align: center;
+    color: rgba(235,235,235,1);
+}
+
+.header_menu li {
+    height: 100%;
+    margin-right: 1.5vw;
+    margin-right: 1.5vw;
+    padding-right: 1.5vw;
+    padding-left: 1.5vw;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header_menu li:hover {
+    background-color: #518860;
+}
+
+.header_login {
+    flex: 2;
+    display: flex;
+    flex-direction: row;
+    font-family: 'Poppins';
+    
+    line-height: 22px;
+    text-align: center;
+    
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.header_login_text {
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: rgba(235,235,235,1);
+}
+
+.header_login_text span {
+    color: #F798A3;
+}
+
+.register_button {
+    height: 2rem;
+    width: 12vw;
+
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    
+    background: rgb(198,78,99);
+    background: linear-gradient(90deg, rgba(198,78,99,1) 0%, rgba(237,116,145,1) 100%);
+
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 0.9rem;
+    line-height: 22px;
+    text-align: center;
+    color: rgba(235,235,235,1);
+
+    border-radius: 0.5rem;
+}
+
+.banner {
+    display: flex;
+
+    margin-top: 4rem;
+    padding-left: 20vw;
+
+    height: 100vh;
+    width: 100%;
+
+    align-items: center;
+    justify-content: flex-start;
+
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.1) 0%, rgb(18, 18, 18) 100%), url("./assets/figs/banner1.jpg") center/cover;
+
+}
+
+.banner_content {
+    
+    width: 40vw;
+}
+
+.banner_title {
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 4.2rem;
+    line-height: 4.8rem;
+    text-align: left;
+    color: rgba(235,235,235,1);
+}
+
+.banner_title span {
+    background: -webkit-linear-gradient(#377441, #C1F235);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
